On Tru64 the integer types are in inttypes.h and not in stdint.h as in VMS

Bug 691463, required for jbig2dec.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11563 a1074d23-0009-0410-80fe-cf8c14f379e6